@@ -2326,7 +2326,8 @@ argument_list|(
 name|getBuffer
 argument_list|()
 argument_list|,
-name|ROW_OFFSET
+name|getKeyOffset
+argument_list|()
 argument_list|,
 name|key
 argument_list|,
@@ -2337,6 +2338,27 @@ argument_list|)
 expr_stmt|;
 return|return
 name|key
+return|;
+block|}
+specifier|public
+name|String
+name|getKeyString
+parameter_list|()
+block|{
+return|return
+name|Bytes
+operator|.
+name|toString
+argument_list|(
+name|getBuffer
+argument_list|()
+argument_list|,
+name|getKeyOffset
+argument_list|()
+argument_list|,
+name|getKeyLength
+argument_list|()
+argument_list|)
 return|;
 block|}
 comment|/**    * @return Key offset in backing buffer..    */
@@ -3593,6 +3615,21 @@ operator|.
 name|rawcomparator
 return|;
 block|}
+annotation|@
+name|Override
+specifier|protected
+name|Object
+name|clone
+parameter_list|()
+throws|throws
+name|CloneNotSupportedException
+block|{
+return|return
+operator|new
+name|RootComparator
+argument_list|()
+return|;
+block|}
 block|}
 comment|/**    * A {@link KVComparator} for<code>.META.</code> catalog table    * {@link KeyValue}s.    */
 specifier|public
@@ -3620,6 +3657,21 @@ return|return
 name|this
 operator|.
 name|rawcomparator
+return|;
+block|}
+annotation|@
+name|Override
+specifier|protected
+name|Object
+name|clone
+parameter_list|()
+throws|throws
+name|CloneNotSupportedException
+block|{
+return|return
+operator|new
+name|MetaComparator
+argument_list|()
 return|;
 block|}
 block|}
